# rich-timestamp-bot

./: .env.example  .gitignore  Cargo.toml  README.md  noxfile.py  pyproject.toml
bot/: __main__.py  bot.py  config.py
bot/plugins/: formats.py  info.py  timezone.py
bot/util/: __init__.py
pytz/: __init__.pyi
resources/: demo.mov
rusty/: __init__.py  rusty.pyi
src/: lib.rs
